--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -424,7 +424,7 @@
                                         <wm-gridrow name="gridrow59">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn123">
                                                 <wm-livelist listclass="list-group" itemclass="list-group-item" template="true" itemsperrow="xs-1 sm-1 md-1 lg-1" class="media-list" dataset="bind:Variables.FormMessagesData.dataSet" navigation="Scroll" name="livelistFormMessages"
-                                                loadingdatamsg="Loading Messages..." nodatamessage="No Messages" orderby="postedAt:asc" disableitem="true">
+                                                loadingdatamsg="Loading Messages..." nodatamessage="No Messages" orderby="postedAt:asc" disableitem="false">
                                                     <wm-listtemplate layout="media" name="listtemplate1">
                                                         <wm-container class="media-left media-top" name="container4" width="200px">
                                                             <wm-picture name="Picture" class="media-object" width="32pt" height="32pt" shape="circle" picturesource="bind:!!Variables.CurrentUserDetails.dataSet.id ? 'services/cx2/Users/'+Variables.FormMessagesData.dataSet.data[$i].userId+'/content/photo' : 'resources/images/imagelists/fa-user-170.png'"></wm-picture>
@@ -434,7 +434,7 @@
                                                             fontsize="1.143" fontunit="em"></wm-label>
                                                             <wm-label name="Time" class="pull-right text-muted" caption="bind:Variables.FormMessagesData.dataSet.data[$i].postedAt | toDate: 'MM/dd hh:mm'"></wm-label>
                                                             <wm-label caption="bind:Variables.FormMessagesData.dataSet.message" name="Description" class="p text-muted"></wm-label>
-                                                            <wm-anchor margin="unset 0.5em" name="anchorViewTaggedPeople" caption="ViewTaggedPeople" class="pull-right"></wm-anchor>
+                                                            <wm-anchor margin="unset 0.5em" name="anchorViewTaggedPeople" caption="Tagged People" class="pull-right" iconclass="wi wi-tag" on-click="Widgets.dialogShowTaggedPeople.open()"></wm-anchor>
                                                         </wm-container>
                                                     </wm-listtemplate>
                                                 </wm-livelist>
@@ -450,13 +450,8 @@
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="3" name="gridcolumn159_1">
                                                 <wm-button class="btn-default btn-primary" caption="Post" type="button" margin="unset 0.5em" name="buttonAddMessage" iconclass="wi wi-send" on-click="buttonAddMessageClick($event, $scope)" disabled="false"></wm-button>
-                                                <wm-button class="btn-default btn-link" caption="Tag People" type="button" margin="unset 0.5em" name="button17" iconclass="wi wi-tag" on-click="Widgets.dialogTagPeople.open()"></wm-button>
+                                                <wm-button class="btn-default" caption="Tag People" type="button" margin="unset 0.5em" name="button17" iconclass="wi wi-tag" on-click="Widgets.dialogTagPeople.open()" badgevalue="bind:Variables.PeopleList.dataSet.length"></wm-button>
                                             </wm-gridcolumn>
-                                        </wm-gridrow>
-                                        <wm-gridrow name="gridrow82">
-                                            <wm-gridcolumn columnwidth="1" name="gridcolumn160_1"></wm-gridcolumn>
-                                            <wm-gridcolumn columnwidth="9" name="gridcolumn161"></wm-gridcolumn>
-                                            <wm-gridcolumn columnwidth="2" name="gridcolumn162"></wm-gridcolumn>
                                         </wm-gridrow>
                                     </wm-layoutgrid>
                                 </wm-tabpane>
@@ -891,6 +886,31 @@
             <wm-dialogactions name="dialogactions6">
                 <wm-button class="btn-primary" caption="Close" on-click="closeDialog()" name="button14"></wm-button>
             </wm-dialogactions>
+        </wm-dialog>
+    </wm-view>
+    <wm-view class="dialog-view" name="viewShowTaggedPeople">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Tagged People" iconclass="wi wi-tag-faces" name="dialogShowTaggedPeople">
+            <wm-dialogactions name="dialogactions7">
+                <wm-button class="btn-primary" caption="Close" on-click="closeDialog()" name="button18"></wm-button>
+            </wm-dialogactions>
+            <wm-livelist listclass="list-group" itemclass="list-group-item" template="true" class="media-list" dataset="bind:Variables.GetTaggedPeopleListByMessage.dataSet" navigation="Scroll" name="livelistTaggedPeopleForMessage" nodatamessage="No Person is selected. Please search for a Person"
+            orderby="id:desc">
+                <wm-listtemplate layout="media" name="listtemplate1">
+                    <wm-layoutgrid name="layoutgrid5">
+                        <wm-gridrow name="gridrow17_1">
+                            <wm-gridcolumn columnwidth="2" name="gridcolumn174">
+                                <wm-picture name="picture4" picturesource="bind:!!Variables.GetTaggedPeopleListByMessage.dataSet.data[$i].users.id? 'services/cx2/Users/'+Variables.GetTaggedPeopleListByMessage.dataSet.data[$i].users.id+'/content/photo' : 'resources/images/imagelists/fa-user-170.png'"
+                                width="50pt" height="50pt"></wm-picture>
+                            </wm-gridcolumn>
+                            <wm-gridcolumn columnwidth="10" name="gridcolumn25_1">
+                                <wm-label padding="unset 0.5em .5em 0.5em" name="label11" caption="bind:Variables.GetTaggedPeopleListByMessage.dataSet.data[$i].users.firstName+' '+Variables.GetTaggedPeopleListByMessage.dataSet.data[$i].users.lastName" width="100%"
+                                fontweight="bold"></wm-label>
+                                <wm-label padding="unset 0.5em" name="label12" caption="bind:Variables.GetTaggedPeopleListByMessage.dataSet.data[$i].users.email" width="100%"></wm-label>
+                            </wm-gridcolumn>
+                        </wm-gridrow>
+                    </wm-layoutgrid>
+                </wm-listtemplate>
+            </wm-livelist>
         </wm-dialog>
     </wm-view>
 </wm-page>
