removed "sub short code" search text from subdivision search Files modified - [pages-config.json,ManageGISData.variables.json,ManageGISData.html,EditGISRecord.html]

--- a/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
+++ b/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
@@ -21,7 +21,7 @@
                                             <wm-form-field name="parcel" displayname="Parcel" show="true" primary-key="false" generator="assigned" key="parcel" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" disabled="false"></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="4" name="gridcolumn7">
-                                            <wm-form-field name="subdivisions" displayname="Subdivision" show="true" primary-key="false" generator="assigned" key="subdivisions" type="autocomplete" is-related="true" required="false" widget="autocomplete" placeholder="Search by Subdivision Name or Short Code"
+                                            <wm-form-field name="subdivisions" displayname="Subdivision" show="true" primary-key="false" generator="assigned" key="subdivisions" type="autocomplete" is-related="true" required="false" widget="autocomplete" placeholder="Search by Subdivision Name"
                                             displayexpression="subdivision" orderby="subdivision:asc" disabled="false" dataset="bind:Variables.CurrentMunicipalitySubdivisions.dataSet" searchkey="subdivision" displaylabel="subdivision"></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="4" name="gridcolumn8">
