--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -253,7 +253,8 @@
                                                         <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
                                                         <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="Widgets.dialogUploadDocument.open()" shortcutkey=""
                                                         disabled="false"></wm-grid-action>
-                                                        <wm-grid-row-action key="customRow" display-name="View" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View" disabled="false"></wm-grid-row-action>
+                                                        <wm-grid-row-action key="customRow" display-name="Download" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="Download" action="Variables.svDownloadDocument.invoke()"
+                                                        disabled="false"></wm-grid-row-action>
                                                         <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                                     </wm-grid>
                                                 </wm-livegrid>
