- Added instructions for Form Designs Files modified - [FormTypes.java,cx2_published_dataModel.json,UsersController.java,NewForm.variables.json,servicedef.xml,EditForm.html,NewForm.html,FormMessagesController.java,EditForm.variables.json,FormMessageTaggingController.java,db-connection-settings.json]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -36,6 +36,11 @@
                                                             <wm-form-field name="municipalityInternalForm" displayname="Municipality Internal Form" show="true" primary-key="false" generator="assigned" key="municipalityInternalForm" type="boolean" widget="checkbox" placeholder="" hint="This makes the form hidden from standard users and only visible to employees of your Municipality"></wm-form-field>
                                                         </wm-gridcolumn>
                                                     </wm-gridrow>
+                                                    <wm-gridrow name="gridrow1333">
+                                                        <wm-gridcolumn columnwidth="12" name="gridcolumn1333">
+                                                            <wm-form-field displayname="Instructions" widget="richtext" show="true" type="custom" name="instructions" key="instructions" hint="This is shown first on the New Form wizard to guide people when making new forms of this type." maxlength=""></wm-form-field>
+                                                        </wm-gridcolumn>
+                                                    </wm-gridrow>
                                                 </wm-panel>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
