--- a/src/main/webapp/pages/NewForm/NewForm.html
+++ b/src/main/webapp/pages/NewForm/NewForm.html
@@ -31,6 +31,11 @@
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="2" name="gridcolumn15"></wm-gridcolumn>
                                     </wm-gridrow>
+                                    <wm-gridrow name="gridrow46_1">
+                                        <wm-gridcolumn columnwidth="12" name="gridcolumn90_1">
+                                            <wm-label padding="unset 0.5em" name="labelFormInstructions" caption="bind:'<br ></wm-label><br />' + (!!Variables.lvFormType.dataSet.data[$i].instructions ? Variables.lvFormType.dataSet.data[$i].instructions : '<div class=&quot;text-center&quot;>Welcome to the New Form Wizard. Please provide the requested data for the following steps in order to submit your new form.</div>')"></wm-label>
+                                        </wm-gridcolumn>
+                                    </wm-gridrow>
                                 </wm-layoutgrid>
                             </wm-wizardstep>
                             <wm-wizardstep name="wizardstep2" title="Submit on Behalf" ng-if="loaded &amp;&amp; submitOnBehalf" show="true" enableskip="true" on-skip="wizardstep2Skip($scope, currentStep, stepIndex)">
