- Forms with Collect Fees unchecked should no longer show a fees tab Files modified - [Forms.html]

--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -326,7 +326,7 @@
                                         </wm-gridrow>
                                     </wm-layoutgrid>
                                 </wm-tabpane>
-                                <wm-tabpane name="tabpaneFees" title="FEES">
+                                <wm-tabpane name="tabpaneFees" title="FEES" show="bind:Variables.lvFormType.dataSet.data[$i].collectFees">
                                     <wm-layoutgrid name="layoutgrid14">
                                         <wm-gridrow name="gridrow54">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn113">
